# hs-books

./: .gitignore  README.md  TODO.md  hs-books.cabal  stack.yaml
.github/workflows/: ci.yaml
html/: index.html
html/static/css/: main.css
html/static/js/: main.js
public_html/: index.html
public_html/static/css/: main.css
public_html/static/js/: main.js
scripts/: build-and-install.sh  build-copy-reset.sh  build-copy-run-static.sh  build-copy-run.sh  build-copy-static.sh  build-copy.sh  build-profiled.sh  copy-cgi.sh  reset-cache.sh  run.sh  set-permissions-debian.sh
src/: Main.hs
