name:                hs-books
version:             0.1.0.0
synopsis:            FaaS web app for listing .epub books in a directory
description:         Please see README.md
homepage:            https://github.com/greatest-ape/hs-books
license:             BSD3
license-file:        LICENSE
author:              Joakim Frostegård
maintainer:          joakim.frostegard@gmail.com
copyright:           2017-2021 Joakim Frostegård
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hs-books
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       aeson
                     , base >= 4.7 && < 5
                     , base16-bytestring
                     , binary
                     , bytestring
                     , cgi
                     , containers
                     , cryptohash-md5
                     , directory
                     , epub-metadata
                     , gd
                     , hxt
                     , mtl
                     , split
                     , tagsoup
                     , text
                     , uri-encode
                     , zip-archive
